src/objects/Question_Log__c.object
<CustomObject>
    <description>TOOLKIT - An object that represents a question that a project team member has about a request.</description>
    <fields>
        <fullName>Actual_Close_Date__c</fullName>
        <description>Closing date of Question Log</description>
        <formula>IF(ISPICKVAL(Status__c, &quot;Closed&quot;), 
TODAY(),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Answer__c</fullName>
        <description>Answer for the Question Log</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Answer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User responsible to answer the Question Log</description>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Question_Logs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Capability__c</fullName>
        <description>Related request&apos;s capability name</description>
        <formula>Request__r.Feature__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Feature</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Reported__c</fullName>
        <description>Date of Question Log Creation.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Reported</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Resolved__c</fullName>
        <description>Date of Question Log resolved.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Resolved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Additional details about Question Log.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Domain__c</fullName>
        <label>Domain</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Management</fullName>
                </value>
                <value>
                    <fullName>Assets/Install Base</fullName>
                </value>
                <value>
                    <fullName>Campaign Management</fullName>
                </value>
                <value>
                    <fullName>Case Management</fullName>
                </value>
                <value>
                    <fullName>Chatter</fullName>
                </value>
                <value>
                    <fullName>Communications Media and Technologies</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Currency Management</fullName>
                </value>
                <value>
                    <fullName>Financial Services</fullName>
                </value>
                <value>
                    <fullName>Forecasting</fullName>
                </value>
                <value>
                    <fullName>Lead Management</fullName>
                </value>
                <value>
                    <fullName>Life Sciences</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Opportunity Management</fullName>
                </value>
                <value>
                    <fullName>Outlook</fullName>
                </value>
                <value>
                    <fullName>Product Management</fullName>
                </value>
                <value>
                    <fullName>Products</fullName>
                </value>
                <value>
                    <fullName>Reports and Dashboards</fullName>
                </value>
                <value>
                    <fullName>Retail Marketing</fullName>
                </value>
                <value>
                    <fullName>Search Marketing</fullName>
                </value>
                <value>
                    <fullName>Tasks and Activities</fullName>
                </value>
                <value>
                    <fullName>User Management</fullName>
                </value>
                <value>
                    <fullName>Website Integration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expected_Close_Date__c</fullName>
        <description>Expected Closing Date for Question Log.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Expected Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Communications, Media and Technology</fullName>
                </value>
                <value>
                    <fullName>Financial Services</fullName>
                </value>
                <value>
                    <fullName>Health &amp; Public Services</fullName>
                </value>
                <value>
                    <fullName>Products</fullName>
                </value>
                <value>
                    <fullName>Resources</fullName>
                </value>
                <value>
                    <fullName>Cross-Industry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Value_Delivery_Question__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Value Delivery Question</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>Severity of Question Log.</description>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <description>Detailed question.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Question</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related request to the question log</description>
        <label>Requirement</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Question Log</relationshipLabel>
        <relationshipName>Question_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requested_Date__c</fullName>
        <description>Date of request of Question Log</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requirement_Status__c</fullName>
        <formula>TEXT(Request__r.Status__c)</formula>
        <label>Requirement Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolution_Comments__c</fullName>
        <description>Additional details about Question Log</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Resolution/Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <label>Phase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Plan and Analyze</fullName>
                </value>
                <value>
                    <fullName>Scope</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Build</fullName>
                </value>
                <value>
                    <fullName>Test</fullName>
                </value>
                <value>
                    <fullName>Deploy</fullName>
                </value>
                <value>
                    <fullName>Initiate and Confirm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sprint__c</fullName>
        <formula>Request__r.Sprint__r.Name</formula>
        <label>Sprint</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Indicator__c</fullName>
        <description>Displays a status as red, green or yellow ball</description>
        <formula>IMAGE(if(ISPICKVAL(Status__c ,&quot;Clarification Requested&quot;) &amp;&amp; today() - datevalue(CreatedDate) &lt; 2, &quot;/img/samples/light_green.gif&quot;,
if(ISPICKVAL(Status__c ,&quot;Clarification Requested&quot;) &amp;&amp; today() - datevalue(CreatedDate) &lt; 5, &quot;/img/samples/light_yellow.gif&quot;,&quot;/img/samples/light_red.gif&quot;)),&quot;/img/samples/light_green.gif&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Current status of Question Log</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Clarification Requested</fullName>
                </value>
                <value>
                    <fullName>Clarification Provided</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Capability__c</fullName>
        <label>Sub-Capability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Access</fullName>
                </value>
                <value>
                    <fullName>Account Hierarchy</fullName>
                </value>
                <value>
                    <fullName>Account Maintenance</fullName>
                </value>
                <value>
                    <fullName>Account Ownership and Assignment</fullName>
                </value>
                <value>
                    <fullName>Case Solutions</fullName>
                </value>
                <value>
                    <fullName>Collaboration</fullName>
                </value>
                <value>
                    <fullName>Custom Reports</fullName>
                </value>
                <value>
                    <fullName>Dashboards</fullName>
                </value>
                <value>
                    <fullName>Data Management</fullName>
                </value>
                <value>
                    <fullName>Definition</fullName>
                </value>
                <value>
                    <fullName>Email Marketing</fullName>
                </value>
                <value>
                    <fullName>Fields</fullName>
                </value>
                <value>
                    <fullName>Files and Attachments</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Integration</fullName>
                </value>
                <value>
                    <fullName>Knowledge Articles</fullName>
                </value>
                <value>
                    <fullName>Lead Assignment</fullName>
                </value>
                <value>
                    <fullName>Lead Conversion</fullName>
                </value>
                <value>
                    <fullName>Lead Creation</fullName>
                </value>
                <value>
                    <fullName>Lead Qualification</fullName>
                </value>
                <value>
                    <fullName>Lead Source</fullName>
                </value>
                <value>
                    <fullName>Lead Workflow Process</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Managing Multiple Currencies</fullName>
                </value>
                <value>
                    <fullName>Ownership</fullName>
                </value>
                <value>
                    <fullName>Page Layouts</fullName>
                </value>
                <value>
                    <fullName>Permissions</fullName>
                </value>
                <value>
                    <fullName>Pricing Book</fullName>
                </value>
                <value>
                    <fullName>Process</fullName>
                </value>
                <value>
                    <fullName>Product Catalog</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User who submitted the Question Log</description>
        <label>Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Question_Logs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <formula>Request__r.Team__c</formula>
        <label>Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tips_and_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tips and Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Track__c</fullName>
        <description>Track of the question log</description>
        <label>Track</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Track 1</fullName>
                </value>
                <value>
                    <fullName>Track 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Use_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Use Case</label>
        <referenceTo>Use_Case__c</referenceTo>
        <relationshipLabel>Question Log</relationshipLabel>
        <relationshipName>Question_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Question Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Request__c</columns>
        <columns>Question__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Capability__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Submitter__c</columns>
        <columns>Team__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,Clarification Requested</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CPQ_Question_Log</fullName>
        <columns>NAME</columns>
        <columns>Submitter__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Question__c</columns>
        <columns>Answer__c</columns>
        <columns>Requested_Date__c</columns>
        <columns>Expected_Close_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Request__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Team__c</field>
            <operation>contains</operation>
            <value>CPQ</value>
        </filters>
        <label>CPQ Question Log</label>
    </listViews>
    <listViews>
        <fullName>FSD_Question_Log</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Expected_Close_Date__c</columns>
        <columns>Capability__c</columns>
        <columns>Submitter__c</columns>
        <columns>Question__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Answer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sprint__c</field>
            <operation>contains</operation>
            <value>FSD</value>
        </filters>
        <label>FSD Question Log</label>
    </listViews>
    <listViews>
        <fullName>NGOEP</fullName>
        <columns>NAME</columns>
        <columns>Question__c</columns>
        <columns>Status__c</columns>
        <columns>Sprint__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sprint__c</field>
            <operation>contains</operation>
            <value>NGOEP</value>
        </filters>
        <label>NGOEP</label>
    </listViews>
    <listViews>
        <fullName>QL_LoA</fullName>
        <columns>NAME</columns>
        <columns>Question__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Capability__c</columns>
        <columns>Request__c</columns>
        <columns>Status__c</columns>
        <columns>Submitter__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Team__c</field>
            <operation>equals</operation>
            <value>LoA</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>QL - LoA</label>
    </listViews>
    <listViews>
        <fullName>SWx_Digital_Sales</fullName>
        <columns>NAME</columns>
        <columns>Question__c</columns>
        <columns>Answer__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Status__c</columns>
        <columns>Expected_Close_Date__c</columns>
        <columns>Priority__c</columns>
        <columns>Submitter__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Team__c</field>
            <operation>equals</operation>
            <value>Digital Sales</value>
        </filters>
        <label>Digital Sales // SWx</label>
    </listViews>
    <listViews>
        <fullName>SaaS_Delivery_Question_Log</fullName>
        <columns>NAME</columns>
        <columns>Request__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Team__c</columns>
        <columns>Capability__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Question_Log__c.SaaS_Delivery_Question_Log</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>SaaS Delivery Question Log</label>
    </listViews>
    <listViews>
        <fullName>SaaS_Delivery_Question_Log1</fullName>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>Status__c</columns>
        <columns>Question__c</columns>
        <columns>Answer__c</columns>
        <columns>Request__c</columns>
        <columns>Expected_Close_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Question_Log__c.SaaS_Delivery_Question_Log</value>
        </filters>
        <filters>
            <field>Capability__c</field>
            <operation>contains</operation>
            <value>Price</value>
        </filters>
        <label>Question Log for Pricing</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Sprint_2</fullName>
        <columns>Request__c</columns>
        <columns>NAME</columns>
        <columns>Submitter__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Status__c</columns>
        <columns>Question__c</columns>
        <columns>Answer__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Priority__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sprint__c</field>
            <operation>contains</operation>
            <value>NGOEP</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,Clarification Requested</value>
        </filters>
        <label>NGOEP - Open questions</label>
    </listViews>
    <listViews>
        <fullName>Value_Delivery_Question_Log</fullName>
        <columns>NAME</columns>
        <columns>Capability__c</columns>
        <columns>Domain__c</columns>
        <columns>Question__c</columns>
        <columns>Industry__c</columns>
        <columns>Scope__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Question_Log__c.Value_Delivery_Question_Log</value>
        </filters>
        <label>Value Delivery Question Log</label>
    </listViews>
    <nameField>
        <displayFormat>QL-{0000}</displayFormat>
        <label>Question Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Question Log</pluralLabel>
    <recordTypes>
        <fullName>SaaS_Delivery_Question_Log</fullName>
        <active>true</active>
        <label>PMO Question</label>
    </recordTypes>
    <recordTypes>
        <fullName>Value_Delivery_Question_Log</fullName>
        <active>true</active>
        <label>Value Delivery Question</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>